# Vista-VID

./: .env.example  README.md  main.py  pyproject.toml  qa_results.json  requirements.txt  youtube_video_analysis.json
quickstart/: gemini.py  gemini_video_understanding.py
src/: entities.py  generate.py
src/pipelines/: qa_pipeline.py  video_description_pipeline.py
src/prompts/: __init__.py  factory.py  tasks.md
